--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   postgres:
     image: postgres:15
-    container_name: postgres_db
+    container_name: chat_db
     ports:
       - '5432:5432'
     env_file:
