--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.3.2",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.4.0",
     "class-validator": "^0.14.1",
     "json-api-nestjs": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
